--- a/src/App.css
+++ b/src/App.css
@@ -41,9 +41,20 @@ body {
 
 .table-prepare-end p {
   text-align: center;
-  margin: 100px 0;
-  padding: 100px 0;
-  font-size: 3em; 
+  margin: 50px 0;
+  padding: 50px 0;
+  font-size: 2em; 
+  font-weight: bolder;
+  background-color: rgba(0,24,0,0.75);
+  border-style: solid;
+  border-width: 5px;
+}
+
+.table-prepare-end .scores {
+  text-align: center;
+  margin: 25px 0;
+  padding: 25px 0;
+  font-size: 0.75em; 
   font-weight: bolder;
   background-color: rgba(0,24,0,0.75);
   border-style: solid;
